--- a/server/root/rbcms/view/installer.rhtml
+++ b/server/root/rbcms/view/installer.rhtml
@@ -26,21 +26,21 @@
                     <div class="form-group" v-show="phase1">
                         <label for="USERNAME">ユーザー名</label>
                         <small class="text-danger" v-if="messageUsername">{{messageUsername}}</small>
-                        <input type="text" id="USERNAME" class="form-control text-center" placeholder="ユーザー名を入力" v-model="USERNAME" />
+                        <input type="text" id="USERNAME" class="form-control text-center" placeholder="ユーザー名を入力" v-model="username" />
                         <small class="form-text text-muted text-secondary">半角英数字とアンダースコアのみ使用できます。ユーザー名は後からでも変更することができます。</small>
                     </div>
 
                     <div class="form-group" v-show="phase1">
                         <label for="PASSWORD">パスワード</label>
                         <small class="text-danger" v-if="messagePassword">{{messagePassword}}</small>
-                        <input type="password" id="PASSWORD" class="form-control text-center" placeholder="パスワードを入力" v-model="PASSWORD" />
+                        <input type="password" id="PASSWORD" class="form-control text-center" placeholder="パスワードを入力" v-model="password" />
                         <small class="form-text text-muted text-secondary">半角英数字アンダースコア8文字以上30文字未満。ハイフンなどの記号は使用不可です。<br><u class="text-danger">パスワードは後から変更できません。</u></small>
                     </div>
 
                     <div class="form-group" v-show="phase2">
                         <label for="ADDRESS">メールアドレス</label>
                         <small class="text-danger" v-if="messageAddress">{{messageAddress}}</small>
-                        <input type="email" id="ADDRESS" class="form-control text-center" placeholder="メールアドレスを入力" v-model="ADDRESS" />
+                        <input type="email" id="ADDRESS" class="form-control text-center" placeholder="メールアドレスを入力" v-model="address" />
                         <small class="form-text text-muted text-secondary">管理者のメールアドレスを設定します。メールアドレスは後から変更できます。</small>
                     </div>
 
@@ -67,9 +67,9 @@
                 el: "#app",
 
                 data: {
-                    USERNAME: "",
-                    PASSWORD: "",
-                    ADDRESS: "",
+                    username: "",
+                    password: "",
+                    address: "",
 
                     token: "<%= token %>",
 
@@ -85,7 +85,7 @@
 
                     messageUsername: function () {
                         const regexUsername = new RegExp (/^\w+$/)
-                        if (regexUsername.test (this.USERNAME)) {
+                        if (regexUsername.test (this.username)) {
                             return "利用できます。"
                         } else if (this.USERNAME) {
                             return "利用できません。"
@@ -94,7 +94,7 @@
 
                     messagePassword: function () {
                         const regexPassword = new RegExp (/^\w{8,30}$/)
-                        if (regexPassword.test (this.PASSWORD)) {
+                        if (regexPassword.test (this.password)) {
                             return "利用できます。"
                         } else if (this.PASSWORD) {
                             return "利用できません。"
@@ -103,7 +103,7 @@
 
                     messageAddress: function () {
                         const regexAddress = new RegExp (/^[A-Za-z0-9]{1}[A-Za-z0-9_.-]*@{1}[A-Za-z0-9_.-]{1,}\.[A-Za-z0-9]{1,}$/)
-                        if (regexAddress.test (this.ADDRESS)) {
+                        if (regexAddress.test (this.address)) {
                             return "利用できます。"
                         } else if (this.ADDRESS) {
                             return "利用できません。"
@@ -126,7 +126,7 @@
                         if (this.phase1) {
                             const regexUsername = new RegExp (/^\w+$/)
                             const regexPassword = new RegExp (/^\w{8,30}$/)
-                            if (regexUsername.test (this.USERNAME) && regexPassword.test (this.PASSWORD)) {
+                            if (regexUsername.test (this.username) && regexPassword.test (this.password)) {
                                 this.phase1 = false
                                 this.alertReset ()
                                 this.phase2 = true
@@ -135,7 +135,7 @@
                             }
                         } else if (this.phase2) {
                             const regexAddress = new RegExp (/^[A-Za-z0-9]{1}[A-Za-z0-9_.-]*@{1}[A-Za-z0-9_.-]{1,}\.[A-Za-z0-9]{1,}$/)
-                            if (regexAddress.test (this.ADDRESS)) {
+                            if (regexAddress.test (this.address)) {
                                 this.phase2 = false
                                 this.alertReset ()
                                 this.install ()
@@ -159,7 +159,7 @@
                         this.topMessage = "インストールしています・・・"
                         try {
                             var xhr = new XMLHttpRequest ()
-                            var postdata = "USERNAME=" + this.USERNAME + "&PASSWORD=" + this.PASSWORD + "&ADDRESS=" + this.ADDRESS + "&TOKEN=" + this.token
+                            var postdata = "username=" + this.username + "&password=" + this.password + "&address=" + this.address + "&token=" + this.token
                             xhr.onreadystatechange = function () {
                                 var READYSTATE_COMPLETED = 4
                                 var HTTP_STATUS_OK = 200
