--- a/server/root/rbcms/view/console.rhtml
+++ b/server/root/rbcms/view/console.rhtml
@@ -20,7 +20,7 @@
                 <div class="col-6">
                     <div class="list-group list-group-horizontal ml-auto" style="width:fit-content;">
                         <a href="javascript:void(0)" target="" class="list-group-item border-0 small">{{username}}</a>
-                        <a href="" target="" class="list-group-item border-0 small">ログアウト</a>
+                        <a href="/admin/logout" target="" class="list-group-item border-0 small">ログアウト</a>
                     </div>
                 </div> 
 
